Fix: make the text in input fields wrap
This was achieved by replacing the input tag by a textarea tag.

This fixes MEN-10 #comment I should really plaster that all over StackOverflow #status done

--- a/static/stylesheets/styles.css
+++ b/static/stylesheets/styles.css
@@ -64,4 +64,5 @@ tr{
     font-family: 'Crafty Girls', cursive;
     margin: 0px auto;
     width: 50%;
+    table-layout: fixed;
 }
